changes: Asignando variables de entorno de .env.example y modificando ruta de cors(())

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,4 @@
-DEBUG=
-PORT=
-DBHOST=
-DBPORT=
-DBNAME=
-TOKEN_SECRET=
-TOKEN_EXP=
+DEBUG=app:*
+PORT=3000
+TOKEN_SECRET=lNT20z5nHkz0pjmAY8zKMRqgF5G9UFEo
+DBBURI="mongodb+srv://00162121:Mpo9bJtETzX6KQH6@cluster0.zmg767t.mongodb.net/?retryWrites=true&w=majority"
