--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "howtools-webservice",
   "version": "0.0.0",
   "private": true,
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node app.js",
+    "dev": "DEBUG=app:* nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
